# ansible-role-plex

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements-ansible.txt
.github/workflows/: lint.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: debian.yml  main.yml  redhat.yml  ubuntu.yml
templates/: plex.repo.j2
tests/: .gitignore  Vagrantfile  setup.yml
vars/: all.yml  debian.yml  el.yml  redhat.yml  ubuntu.yml
