[project]
name = "plex_ansible"
version = "0.1.0"
description = "Ansible role to install plexmedia server on Redhat and Debian based systems."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "ansible-dev-tools>=25.9.0",
  "ansible-vault>=4.1.0",
  "awxkit>=24.6.1",
  "pre-commit>=4.5.1",
  "yamllint>=1.37.1",
]
